--- a/meson.build
+++ b/meson.build
@@ -29,11 +29,11 @@ find = find_program('find')
 
 add_project_arguments(
     '-DSBINDIR="' + join_paths(get_option('prefix'), get_option('sbindir')) + '"',
-    '-DFIXTURESDIR="' + meson.global_source_root() + '/src/tests/fixtures"',
+    '-DFIXTURESDIR="' + meson.project_source_root() + '/tests/ctests/fixtures"',
     '-D_XOPEN_SOURCE=700',
     language: 'c')
 
-inc = include_directories('include')
+inc = include_directories('include', 'src')
 subdir('include')
 subdir('src')
 subdir('dbus')
@@ -63,6 +63,11 @@ test_env = [
     'NETPLAN_GENERATE_PATH=' + join_paths(meson.current_build_dir(), 'src', 'generate'),
     'NETPLAN_DBUS_CMD=' + join_paths(meson.current_build_dir(), 'dbus', 'netplan-dbus'),
 ]
+
+if get_option('unit_testing')
+  subdir('tests/ctests')
+endif
+
 #FIXME: exclude doc/env/
 test('linting',
      pyflakes,
